--- a/multip.html
+++ b/multip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adição</title>
+    <title>Multiplicação</title>
 
     <link rel="stylesheet" href="estilo/style.css">
     
@@ -11,44 +11,44 @@
 <body>
     <main>
         <h1>Operações Básicas</h1>
-        <h2 class="titulosub">Adição</h2>
+        <h2 class="titulosub">Multiplicação</h2>
         <section>
-            <h2>Quanto é 2 + 2?</h2>
+            <h2>Quanto é 2 x 2?</h2>
             <input type="number" name="num1" id="num1" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar1()">
             <div id="res1">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 4 + 4?</h2>
+            <h2>Quanto é 3 x 3?</h2>
             <input type="number" name="num2" id="num2" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar2()">
             <div id="res2">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 6 + 6?</h2>
+            <h2>Quanto é 4 x 4?</h2>
             <input type="number" name="num3" id="num3" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar3()">
             <div id="res3">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 7 + 7?</h2>
+            <h2>Quanto é 5 x 5?</h2>
             <input type="number" name="num4" id="num4" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar4()">
             <div id="res4">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 9 + 9?</h2>
+            <h2>Quanto é 6 x 6?</h2>
             <input type="number" name="num5" id="num5" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar5()">
             <div id="res5">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 13 + 14?</h2>
+            <h2>Quanto é 7 x 3?</h2>
             <input type="number" name="num6" id="num6" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar6()">
             <div id="res6">Sua resposta está:</div>
@@ -56,24 +56,24 @@
 
         
         <section>
-            <h2>Quanto é 15 + 35?</h2>
+            <h2>Quanto é 8 x 4?</h2>
             <input type="number" name="num7" id="num7" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar7()">
             <div id="res7">Sua resposta está:</div>
         </section>
 
         <section>
-            <h2>Quanto é 18 + 17?</h2>
+            <h2>Quanto é 9 x 5</h2>
             <input type="number" name="num8" id="num8" placeholder="Resposta">
             <input class="botao" type="button" value="Verificar" onclick="verificar8()">
             <div id="res8">Sua resposta está:</div>
         </section>
 
-        <a href="multip.html"><button class="nivel2">Nível 3</button></a>
+        <a href="divisao.html"><button class="nivel2">Nível 4</button></a>
     </main>
 
     <script>
-        function verificar1(){  /* 2 + 2 */
+        function verificar1(){  /* 2 x 2 */
             var result1 = document.getElementById('num1').value
             var res1 = document.getElementById('res1')
             var num1 = 4
@@ -88,10 +88,10 @@
             }
         }
 
-        function verificar2() {  /* 4 + 4 */
+        function verificar2() {  /* 3 x 3 */
             var result2 = document.getElementById('num2').value
             var res2 = document.getElementById('res2')
-            var num2 = 8
+            var num2 = 9
             if (result2 === num2.toString()){
                 res2.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -103,10 +103,10 @@
             }
         }
 
-        function verificar3() {  /* 6 + 6 */
+        function verificar3() {  /* 4 x 4 */
             var result3 = document.getElementById('num3').value
             var res3 = document.getElementById('res3')
-            var num3 = 12
+            var num3 = 16
             if (result3 === num3.toString()){
                 res3.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -118,10 +118,10 @@
             }
         }
 
-        function verificar4() {  /* 7 + 7 */
+        function verificar4() {  /* 5 x 5 */
             var result4 = document.getElementById('num4').value
             var res4 = document.getElementById('res4')
-            var num4 = 14
+            var num4 = 25
             if (result4 === num4.toString()){
                 res4.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -133,10 +133,10 @@
             }
         }
 
-        function verificar5() {  /* 9 + 9 */
+        function verificar5() {  /* 6 x 6 */
             var result5 = document.getElementById('num5').value
             var res5 = document.getElementById('res5')
-            var num5 = 18
+            var num5 = 36
             if (result5 === num5.toString()){
                 res5.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -148,10 +148,10 @@
             }
         }
 
-        function verificar6() {  /* 13 + 14 */
+        function verificar6() {  /* 7 x 3 */
             var result6 = document.getElementById('num6').value
             var res6 = document.getElementById('res6')
-            var num6 = 27
+            var num6 = 21
             if (result6 === num6.toString()){
                 res6.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -163,10 +163,10 @@
             }
         }
 
-        function verificar7() {  /* 15 + 35 */
+        function verificar7() {  /* 8 x 4 */
             var result7 = document.getElementById('num7').value
             var res7 = document.getElementById('res7')
-            var num7 = 50
+            var num7 = 32
             if (result7 === num7.toString()){
                 res7.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
@@ -178,10 +178,10 @@
             }
         }
 
-        function verificar8() {  /* 18 + 17 */
+        function verificar8() {  /* 9 x 5 */
             var result8 = document.getElementById('num8').value
             var res8 = document.getElementById('res8')
-            var num8 = 35
+            var num8 = 45
             if (result8 === num8.toString()){
                 res8.innerHTML = `<strong class="v">Correta!</strong>`
             } else {
