--- a/equacao.html
+++ b/equacao.html
@@ -69,7 +69,7 @@
             <div id="res8">Sua resposta está:</div>
         </section>
 
-        <a href=""><button id="botao" class="nivel2" onclick="alert('Parabens!!')"disabled>Finalizar</button></a>
+        <a href="finalizacao.html"><button id="botao" class="nivel2" onclick="alert('Parabens!!')"disabled>Finalizar</button></a>
     </main>
 
     <script>
