--- a/finalizacao.html
+++ b/finalizacao.html
@@ -6,10 +6,8 @@
     <title>Document</title>
     <style>
         body {
-            background-image: url(/fundofinal.jpeg);
-            background-position: center;
-            background-size: cover;
-            /* background-color: #92e4dc; */
+            
+            background-color: #92e4dc; 
         }
 
         main {
