--- a/finalizacao.html
+++ b/finalizacao.html
@@ -6,14 +6,14 @@
     <title>Document</title>
     <style>
         body {
-            
-            background-color: #92e4dc; 
+            /* background-color: #92e4dc;  */
         }
 
         main {
-            background-image: url(/fundofinal.jpeg);
+            background-image: url(fundofinal.jpeg); 
+            background-repeat: no-repeat;
             background-position: center;
-            background-size: cover;
+            background-size: contain;
             border: 1px solid #ec9d80;
             border-radius: 50px;
             box-shadow: 1px 1px 8px 1px black;
@@ -21,17 +21,9 @@
             justify-content: center;
             position: relative;
             top: 230px;
-
             height: 200px;
         }
 
-        h1 {
-            position: relative;
-            top: 30px;
-            font-family: cursive;
-            font-weight: bolder;
-            font-size: 40px;
-        }
     </style>
 </head>
 <body>
