--- a/finalizacao.html
+++ b/finalizacao.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <style>
         body {
-            /* background-color: #92e4dc;  */
+            background-color: #92e4dc;
         }
 
         main {
+            background-color: #FFEEEC;
             background-image: url(fundofinal.jpeg); 
             background-repeat: no-repeat;
             background-position: center;
