atualização do footer

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         <a href="subtracao.html"><button class="button">Iniciar</button></a>
       </div>
     </main>
+     
+    <footer>
+        <p>&#174;Desenvolvido por <a href="">Natasha &#x1F517;</a> e <a href="">Jorge Luiz &#x1F517;</a></p>
+    </footer>
 </body>
 </html>
