--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
      
     <footer>
-        <p>&#174;Desenvolvido por <a href="">Natasha &#x1F517;</a> e <a href="">Jorge Luiz &#x1F517;</a></p>
+        <p>&#174;Desenvolvido por <a href="https://github.com/natasha-queiroz">Natasha &#x1F517;</a> e <a href="https://github.com/jhorgeluiz">Jorge Luiz &#x1F517;</a></p>
     </footer>
 </body>
 </html>
